--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/Lindsor/convalid/issues"
   },
-  "homepage": "https://github.com/Lindsor/convalid#readme"
+  "homepage": "https://github.com/Lindsor/convalid#readme",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
+  }
 }
